<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvbookinfo"
        android:layout_width="match_parent"
        android:layout_height="365dp"
        app:layout_constraintBottom_toTopOf="@id/cvbookdetail"
        android:background="@color/light_primary_color"
        android:padding="4dp">


        <ImageView
            android:id="@+id/ivimagedetail"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/book_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvpages"
            android:src="@mipmap/ic_launcher"
            android:padding="8dp"
            app:cardCornerRadius="8dp"
            android:elevation="12dp"
            android:background="@drawable/myrect"/>



        <TextView
            android:id="@+id/tvpages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ivimagedetail"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ivimagedetail"
            android:text="@string/pages"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvtitledetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvauthordetail"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/ivimagedetail"
            android:text="@string/title_detail"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvauthordetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_second"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/ivimagedetail"
            android:text="@string/author_detail"
            tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivimagedetail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintCircleRadius="24dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvbookdetail"
        android:layout_width="match_parent"
        android:layout_height="365dp"
        app:layout_constraintTop_toBottomOf="@id/cvbookinfo"
        >

        <TextView
            android:id="@+id/tvlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/link"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>